# graphops_interface

./: .env.graphops  .gitignore  LICENSE  MANIFEST.in  README.md  graphops.yml  pyproject.toml
graphops_interface/: __init__.py  cli.py  constants.py  grammar_registry.py
graphops_interface/api/: __init__.py  client.py
graphops_interface/cli/: __init__.py  agent_full_scan.py  agent_git.py  agent_init.py  agent_scan.py  agent_scan2.py  args_parser.py
graphops_interface/core/: __init__.py  config.py
graphops_interface/utils/: __init__.py  encryption.py  git.py
